import "EventIdCommand.proto";

option java_outer_classname="SyncEventsCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;

message SyncEventsCommand {	
	optional int64 requestId = 1;
	repeated EventIdCommand eventIds= 2;
}